@@ -1,3 +1,9 @@
+2012-06-09 Frederik "Freso" S. Olesen <freso.dk@gmail.com>
+
+	* lwjgl-2.8.4-1 :
+	Simple version bump.
+	See http://lwjgl.org/forum/index.php?topic=4608 for version changes.
+
 2012-02-21 Frederik "Freso" S. Olesen <freso.dk@gmail.com>
 
 	* lwjgl-2.8.3-1 :
